[build-system]
requires = ['tensorflow >= 2.7.0,<=2.15.0; python_version >="3.10"',
            'tensorflow >= 2.7.0,<=2.8.4; python_version >="3.8" and python_version <"3.10"',
            'tensorflow <=2.4.4; python_version <"3.8"',
            "setuptools >= 0.53.0"]
build-backend = "setuptools.build_meta"
